tests/baselines/reference/exportStarForValues10(strict=true).errors.txt
file1.ts(1,24): error TS7008: Member 'x' implicitly has an 'any' type.


==== file0.ts (0 errors) ====
    export var v = 1;
    
==== file1.ts (1 errors) ====
    export interface Foo { x }
                           ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    
==== file2.ts (0 errors) ====
    export * from "file0";
    export * from "file1";
    var x = 1;